--- a/css/style.css
+++ b/css/style.css
@@ -1651,9 +1651,9 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   content: "\e903";
 }
 
-.lg-group {
+/* .lg-group {
   *zoom: 1;
-}
+} */
 
 .lg-group:before,
 .lg-group:after {
@@ -2367,10 +2367,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .about {
+  
   padding: 0 0 80px 0;
 }
 
 .about__content {
+  padding: 40px 0px 0px 0px;
+  margin: 20px 0px 0px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2401,7 +2404,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .about__img {
   margin-right: 120px;
-  padding: 0 0 30% 0;
+  padding: 0 0 10% 0;
   margin-top: 100px;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
@@ -2755,8 +2758,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   .info-performance__img {
+    display: none;
     width: 800px;
     height: 100px;
+  }
+  .about__info{
+    margin-top: 50px;
+    padding: 0px 20px 0px 20px;
   }
 
   .about {
@@ -2771,6 +2779,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
   .about__img {
     margin-top: 80px;
+    display: none;
   }
 
   .specifications {
@@ -2824,6 +2833,10 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
   .logo__bnt {
     display: none;
+  }
+  .about__info{
+    margin-top: 0;
+    padding: 0px 10px 0px 10px;
   }
 
   .header__burger:after {
@@ -3030,6 +3043,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   .info-performance__img {
+    display: none;
     width: 600px;
   }
 
@@ -3039,6 +3053,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
   .about__content {
     display: block;
+    padding-top: 15px;
   }
 
   .about__title {
@@ -3129,12 +3144,14 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   .numbers__content {
-    padding: 90px 0 0 0;
+    padding: 50px 0 0 0;
   }
 
   .numbers__body {
+    display: flex;
+    flex-direction:column;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -3268,7 +3285,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   .numbers__content {
-    padding: 80px 0 0 0;
+    padding: 40px 0 0 0;
   }
 
   .numbers__title {
@@ -3346,6 +3363,12 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
     -ms-grid-row: 4;
     -ms-grid-row-span: 1;
     grid-row: 4/5;
+  }
+}
+@media (max-width:1500px) {
+  .info-performance__img{
+    bottom: 340px;
+    right: -25%;
   }
 }
 
