--- a/css/style.css
+++ b/css/style.css
@@ -2435,6 +2435,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   -webkit-transition: all 0.3s;
   -o-transition: all 0.3s;
   transition: all 0.3s;
+  max-width: 150px;
 }
 
 .about__btn:hover {
