--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ html,
 body {
   height: 100%;
   min-width: 320px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -49,6 +50,7 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  scroll-behavior: smooth;
 }
 
 input,
@@ -2031,6 +2033,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   padding: 50px;
   width: 100%;
   max-width: 800px;
+  border-radius: 4px;
 }
 
 .popup__close {
@@ -2235,6 +2238,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   padding: 120px 0 0 0;
   position: relative;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .main-block__content {
@@ -2247,6 +2251,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0 0 50px 0;
+  
 }
 
 .main-block__info {
@@ -2309,7 +2314,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   position: absolute;
   width: 100%;
   height: 100vh;
-  top: 0;
+  top: -55px;
   left: 0;
   padding: 0 0 50% 0;
   opacity: 0.2;
@@ -2371,7 +2376,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .info-performance__img {
   position: absolute;
-  bottom: 340px;
+  bottom: 400px;
   right: -10%;
   width: 1000px;
   height: 100px;
@@ -2380,19 +2385,28 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .about {
   
-  padding: 0 0 80px 0;
+  padding: 30px 0 80px 0;
 }
-
+.about__main-title{
+  margin-top: 40px;
+  text-align: center;
+  font-size: 36px;
+  color: #0066ff;
+  font-family: Montserrat;
+  font-weight: bold;
+}
 .about__content {
-  padding: 40px 0px 0px 0px;
-  margin: 20px 0px 0px 0px;
+  /* padding: 40px 0px 0px 0px; */
+  margin: 60px 0px 0px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  align-items: flex-start;
+  flex-direction: row-reverse;
 }
 
 .about__info {
-  padding: 30px 10px 0 10px;
+  padding: 0px 10px 0 30px;
 }
 
 .about__title {
@@ -2415,12 +2429,13 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .about__img {
-  margin-right: 120px;
-  padding: 0 0 10% 0;
-  margin-top: 100px;
+  /* margin-right: 120px; */
+  /* padding: 0 0 30% 0; */
+
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
+          min-height: 450px;
 }
 
 .about__btn {
@@ -2444,7 +2459,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .specifications {
-  padding: 0 0 100px 0;
+  padding: 100px 0 100px 0;
 }
 
 .specifications__content {
@@ -2491,7 +2506,9 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   font-size: 16px;
   font-weight: bold;
 }
-
+.gallery{
+  padding: 100px 0 0 0;
+}
 .gallery__body {
   display: -ms-grid;
   display: grid;
@@ -2710,6 +2727,18 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   max-width: 180px;
 }
 
+@media (max-width: 1700px) {
+  .info-performance__img {
+    position: absolute;
+    bottom: 350px;
+    right: 0;
+    width: 600px;
+    height: 100px;
+    z-index: 2;
+  }
+}
+
+
 @media (min-width: 991.98px) {
   .quantity__button:hover::before,
   .quantity__button:hover::after {
@@ -2736,6 +2765,27 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 @media (max-width: 1302px) {
+
+
+  .gallery__body {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 333px 333px;
+    grid-template-rows: 333px 333px;
+  }
+
+
+  .info-performance__img {
+    position: absolute;
+    bottom: 350px;
+    right: -20%;
+    width: 600px;
+    height: 100px;
+    z-index: 2;
+  }
+
   ._container {
     max-width: 970px;
   }
@@ -2779,7 +2829,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   .info-performance__img {
-    display: none;
+    /* display: none; */
     width: 800px;
     height: 100px;
   }
@@ -3386,12 +3436,12 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
     grid-row: 4/5;
   }
 }
-@media (max-width:1500px) {
+/* @media (max-width:1500px) {
   .info-performance__img{
     bottom: 340px;
-    right: -25%;
+    right: -10%;
   }
-}
+} */
 
 ._webp .lg-outer .lg-has-vimeo .lg-video-play{ background: url(../img/vimeo-play.webp) no-repeat scroll 0 0 transparent; }
 
