--- a/css/style.css
+++ b/css/style.css
@@ -2586,6 +2586,36 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   -ms-grid-row-span: 2;
   grid-row: 1/3;
 }
+.gallery-full {
+  margin: 0 auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 10;
+}
+.gallery-full__content {
+  
+
+}
+.gallery-full__overlay{
+  background: rgba(0, 0, 0, 0.80);
+  position: absolute;
+  /* top: 0;
+  left: 0; */
+  width: 100%;
+  height: 100%;
+  }
+.gallery-full__body {
+
+}
+.gallery-full_img {
+  width: 100px;
+
+}
 
 .numbers {
   margin-bottom: 184px;
