--- a/css/style.css
+++ b/css/style.css
@@ -1997,6 +1997,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   -webkit-transform: scale(1);
       -ms-transform: scale(1);
           transform: scale(1);
+          border-radius:12px;
 }
 
 .popup__content {
@@ -2040,8 +2041,8 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   width: 20px;
   height: 20px;
   position: absolute;
-  top: 5px;
-  right: 5px;
+  top: 15px;
+  right: 15px;
   cursor: pointer;
   z-index: 30;
   background: url("../img/icons/close-black.svg") 0 0 no-repeat;
@@ -2520,7 +2521,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .gallery__item-img {
   position: relative;
-  cursor: pointer;
+  /* cursor: pointer; */
   display: block;
 }
 
@@ -2542,7 +2543,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   grid-row: 1/3;
 }
 
-.gallery__item-img:hover:before {
+/* .gallery__item-img:hover:before {
   content: "";
   position: absolute;
   top: 0;
@@ -2552,9 +2553,9 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
   z-index: 50;
-}
+} */
 
-.gallery__item-img:hover:after {
+/* .gallery__item-img:hover:after {
   content: "";
   position: absolute;
   width: 50px;
@@ -2567,7 +2568,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   display: inline-block;
   background: url("../img/gallery/1.svg") no-repeat center;
   z-index: 55;
-}
+} */
 
 .img__item-2 {
   -ms-grid-row: 2;
